Fixes by Eszter

--- a/songs-extra/hala-neked-istenunk.tex
+++ b/songs-extra/hala-neked-istenunk.tex
@@ -6,8 +6,8 @@
   \endverse
 
   \beginverse*
-    ^Alleluja, ^áldd Uram, ^alleluja, ^áldd Uram,
-    ^Alleluja, ^áldd Uram, mert ^ő fon^tos ne^künk! ^ ^
+    ^Alleluja, ^áldd, Uram, ^alleluja, ^áldd, Uram,
+    ^Alleluja, ^áldd, Uram, mert ^ő fon^tos ne^künk! ^ ^
   \endverse
 
   \beginverse*
