--- a/songs-mass/szent-vagy-k192.tex
+++ b/songs-mass/szent-vagy-k192.tex
@@ -11,15 +11,15 @@
 
   \beginverse\memorize
     Szent vagy, \[C]szent vagy, szent vagy, \[G7]sz{\_{e}}nt vagy
-    Minden\[F]ségnek Ura, \[G]Istene \[C]
-    \[C7] Dicső\[F]séged betölti a menny\[Em]et, és a Föld\[Am]et
+    Minden\[F]ségnek Ura, \[G]Istene, \[C]
+    \[C7] Dicső\[F]séged betölti a menny\[Em]et és a Föld\[Am]et,
     Hozsan\[Dm]na \[G] a magas\[G7]ság\[C]ban!
   \endverse
 
   \beginverse
     Szent vagy, ^szent vagy, szent vagy, ^szent vagy
-    Minden^ségnek Ura, ^Istene ^
-    ^ \_{Ó} ^áldott, ki az Úr nevében ^eljön mihoz^zánk
+    Minden^ségnek Ura, ^Istene, ^
+    ^ \_{Ó} ^áldott, ki az Úr nevében ^eljön mihoz^zánk,
     Hozsan^na ^ a magas^ság^ban!
   \endverse
 
