--- a/songs-mass/uram-irgalmazz-k159.tex
+++ b/songs-mass/uram-irgalmazz-k159.tex
@@ -14,9 +14,9 @@
   \fi
 
   \beginverse*
-    \[Dm] Uram irgal\[Gm]mazz! \[C7] Uram irgal\[F]mazz!
-    \[Dm] Krisztus kegyel\[Gm]mezz! \[C7] Krisztus kegyel\[F]mezz!
-    \[Dm] Uram irgal\[Gm]mazz! \[A7] Uram irgal\[Dm]mazz!
+    \[Dm] Uram, irgal\[Gm]mazz! \[C7] Uram, irgal\[F]mazz!
+    \[Dm] Krisztus, kegyel\[Gm]mezz! \[C7] Krisztus, kegyel\[F]mezz!
+    \[Dm] Uram, irgal\[Gm]mazz! \[A7] Uram, irgal\[Dm]mazz!
   \endverse
 
   \ifchorded
