--- a/songs/adjunk-halat.tex
+++ b/songs/adjunk-halat.tex
@@ -36,7 +36,7 @@
   \endverse
 
   \beginverse
-    Aki ^benne ^hisz, sose ^szomja^zik,
+    Aki ^Benne ^hisz, sose ^szomja^zik,
     Ő az ^élő ^víz fo^rrása.
     Szent^l{\_{é}}lek, ^jöjj és ^szállj le ^ránk,
     Tölts be ^minket, ^Szeretet! ^
