--- a/songs/aldasoddal-megyunk.tex
+++ b/songs/aldasoddal-megyunk.tex
@@ -1,4 +1,7 @@
-\beginsong{Áldásoddal megyünk}[]
+\beginsong{Áldásoddal megyünk}
+[
+  by={Deák Gábor}
+]
 
   \beginverse
     \[D]Áldásoddal \[G]megyünk, \[Em]megyünk innen \[A]el,
