--- a/songs/alleluja.tex
+++ b/songs/alleluja.tex
@@ -13,14 +13,14 @@
     \[D]Allelu\[F#m]ja, alle\[G]lu – allelu\[D]ja,
     \[G]Allelu\[D]ja, alle\[A]lu\[A7]ja.
     \[D]Allelu\[F#m]ja, alle\[G]lu – allelu\[D]ja,
-    \[G]Allelu\[D]ja, alle\[A]l\[A7]u\[D]ja.
+    \[G]Allelu\[D]ja, alle\[A]l\[A7]u\[D]ja!
   \endchorus
 
   \beginverse\memorize
     \[D]Krisztus az \[F#m]Úr, erő s \[G]hatalom Ö\[D]vé,
-    \[G]Bátran bízz \[D]benne, hisz’ \[A]mond\[A7]ta:
+    \[G]Bátran bízz \[D]Benne, hisz’ \[A]mond\[A7]ta:
     ``Ki \[D]újra ko\[F#m]pog, annak \[G]ajtót nyitnak \[D]majd''.
-    \[G]Allelu\[D]ja, alle\[A]l\[A7]u\[D]ja.
+    \[G]Allelu\[D]ja, alle\[A]l\[A7]u\[D]ja!
   \endverse
 
   \beginverse*
