--- a/songs/ave-maria.tex
+++ b/songs/ave-maria.tex
@@ -1,4 +1,7 @@
-\beginsong{Ave Maria}[]
+\beginsong{Ave Maria}
+[
+  by={zene: Maria Parkinson \newline magyar szöveg: Aszalós Zoltán - Formanek Tamás - Varga Attila}
+]
 
   \beginchorus
     \[G]A\[D]ve Ma\[C]ri\[D]a, \[G]gra\[Am]tia \[C]ple\[D]na,
