--- a/songs/bizom-benned.tex
+++ b/songs/bizom-benned.tex
@@ -18,7 +18,7 @@
     \[G] Úgy hívlak a magány éjje\[Am7]lén,
     Mikor \[F]elvész a \[C]szó, mikor csak \[G]átölelni \[D]jó!
     \[Am]Tudom, hogy \[Em]távol voltam, \[G]fájt Ne\[D]ked.
-    \[Am]Tudom, hogy \[Em]nélküled \[C]nem élhe\[D]t{\_{e}}k.
+    \[Am]Tudom, hogy \[Em]Nélküled \[C]nem élhe\[D]t{\_{e}}k.
   \endverse
 
   \beginverse*
@@ -31,7 +31,7 @@
     ^ Hallod hangom lágy ne^szét,
     Kérlek, ^szólj hoz^zám, mikor csak ^Téged hív a ^szám!
     ^Életem ^nem féltem, hisz ^jó Ve^led.
-    ^Tudom, hogy ^nélküled ^nem élhe^t{\_{e}}k!
+    ^Tudom, hogy ^Nélküled ^nem élhe^t{\_{e}}k!
   \endverse
 
   \beginverse*
