--- a/songs/csak-jezusnak-szolgalok.tex
+++ b/songs/csak-jezusnak-szolgalok.tex
@@ -6,8 +6,8 @@
   \endchorus
 
   \beginverse\memorize
-    \[Em]Áldjad, lelkem \[Hm]Őt, \[Em]dicsérd Terem\[Hm]tőd, \[G]most és \[C]mindörökké, \[G]{\_{á}}\[D]men!
-    \[Em]Áldjad, minden \[Hm]nép, \[C]dicsérd szent Ne\[G]vét, \[G]most és \[C]mindörökké, \[D]{\_{á}}\[G]men!
+    \[Em]Áldjad, lelkem, \[Hm]Őt, \[Em]dicsérd Terem\[Hm]tőd, \[G]most és \[C]mindörökké, \[G]{\_{á}}\[D]men!
+    \[Em]Áldjad, minden \[Hm]nép, \[C]dicsérd szent ne\[G]vét, \[G]most és \[C]mindörökké, \[D]{\_{á}}\[G]men!
   \endverse
 
   \beginverse*
