--- a/songs/elkezdem-ujbol.tex
+++ b/songs/elkezdem-ujbol.tex
@@ -9,7 +9,7 @@
   \endverse
 
   \beginverse*
-    \[Am]Álmodtam életem szép lesz, \[Em]gazdagon nyújthatom \[G]át.
+    \[Am]Álmodtam: életem szép lesz, \[Em]gazdagon nyújthatom \[G]át.
     S \[Am]így jövök, lásd, üres kézzel, \[Em]nincs semmim, ezt adom át.
     \[F]Vedd e \[G]semmi\[C]ségem – csak \[G]ez van, hát \[F]vedd el, A\[C]tyám!
   \endverse
