--- a/songs/gyertek-dicserjuk-egyutt.tex
+++ b/songs/gyertek-dicserjuk-egyutt.tex
@@ -17,9 +17,9 @@
   \endverse
 
   \beginverse*
-    \[Am]Gyertek, gyertek, menjünk fel az Úr hegyére, vígasságnak a helyére,
+    \[Am]Gyertek, gyertek, menjünk fel az Úr hegyére, vigasságnak lakhelyére,
     \[Dm]Ujjongjunk Őelőtte, táncoljunk Őelőtte,
-    Az \[E]Ő neve, az Ő neve: Ott lakik az \[Am]Úr!
+    Az \[E]Ő neve, az Ő neve: \[E7]Ott lakik az \[Am]Úr!
   \endverse
 
 \endsong
