--- a/songs/jezus-nez-ram.tex
+++ b/songs/jezus-nez-ram.tex
@@ -10,7 +10,7 @@
     \endverse
   \fi
 
-  \beginverse
+  \beginverse*
     \[C]Jézus \[Dm]néz rám a \[Am]két szemed\[E7]ből, arra \[Dm]kér, arra \[G7]vár, hogy megért\[C]sem, \[G7]
     \[C]Jézus \[Dm]néz rám a \[Am]két szemed\[E7]ből, arra \[Dm]kér, arra \[G7]vár, hogy szeres\[C]sem.
   \endverse
