--- a/songs/ket-kezemben.tex
+++ b/songs/ket-kezemben.tex
@@ -1,5 +1,6 @@
 \beginsong{Két kezemben}
 [
+  by={Pipó József},
   li={Kék könyv / 119.}
 ]
 
@@ -16,7 +17,7 @@
     \[D]Két kezemben \[G]rejtem, őri\[D]zem az éle\[Em]tem, \[G] minde\[D]nem. \[A]
     \[D]Két kezemben \[G]titkon van je\[D]len a végte\[Em]len \[G] kegye\[D]lem.
     \[G]Ő az erőm, \[A]reményem, hi\[D]tem, \[Hm]Tőle kapom minden szerete\[Em]tem. \[A]
-    \[D]Föl nem fogom, de \[G]hiszem szünte\[D]len, itt vagy ve\[Em]lem, \[A] Iste\[G]nem. \[G] \[A]
+    \[D]Föl nem fogom, de \[G]hiszem szünte\[D]len: itt vagy ve\[Em]lem, \[A] Iste\[G]nem. \[G] \[A]
   \endverse
 
   \ifchorded
