--- a/songs/latod-ujra-este-van.tex
+++ b/songs/latod-ujra-este-van.tex
@@ -22,7 +22,7 @@
 
   \beginverse
     ^ Szeretném, ha szeretnél, minden szavad ^érte^ném,
-    ^ Életemben követ^n{\_{é}}^m, s végül Hozzád érkez^ném.
+    ^ Életemben követ^n{\_{é}}^m, s végül Hozzád érkez^nék.
   \endverse
 
   \beginverse*
