--- a/songs/lelkem-aldd-az-urat.tex
+++ b/songs/lelkem-aldd-az-urat.tex
@@ -21,7 +21,7 @@
     Egy \[G]új nap \[D]kél, és már \[A]ébred \[Hm]minden,
     \[G] Itt az id\[D]ő, hogy \[A]áldja\[Hm]lak,
     És \[G]bármi \[D]ér, bármit r\[A]ejt az út el\_{ő}t\[Hm]tem,
-    \[G] Hadd zengjek \[D]este is majd \[A4]há\[A]lá\[D]val. \[D4] \[D]
+    \[G] Hadd zengjek \[D]este is majd \[A4]há\[A]lá\[D]val! \[D4] \[D]
   \endverse
 
   \beginverse*
@@ -32,7 +32,7 @@
     ^ Kegyelmed ^nagy, és tü^relmed ^hosszú,
     ^ Szerelmed ^mély, és az ^égig ^ér,
     Nem ^szűnök ^énekelni ^jósá^g{\_{o}}dról,
-    ^ Tízezer ^okom van, hogy ^zeng^jek ^még. ^ ^
+    ^ Tízezer ^okom van, hogy ^zeng^jek ^még! ^ ^
   \endverse
 
   \beginverse*
