--- a/songs/lelkem-az-urat-dicserd.tex
+++ b/songs/lelkem-az-urat-dicserd.tex
@@ -1,6 +1,8 @@
 \beginsong{Lelkem, az Urat dicsérd}
 [
   ititle={Az Úr dicsérete},
+  by={Borka Zsolt},
+  sr={145. zsoltár alapján},
   li={Kék könyv / 40.}
 ]
 
