--- a/songs/mily-gyonyoru-dicserni-teged.tex
+++ b/songs/mily-gyonyoru-dicserni-teged.tex
@@ -1,4 +1,4 @@
-\beginsong{Mily gyönyörű dicsérni téged}
+\beginsong{Mily gyönyörű dicsérni Téged}
 [
   by={Gen Verde}
 ]
@@ -9,8 +9,8 @@
     \[G] Mily \[D]gyönyörű \[C]dicsérni \[G]Téged!
     \[Am] Mily \[Am7]gyönyörű \[D]áldani Téged!
     \[G] Jöjj, énekelj \[C]új dalt az Úrnak!
-    Jöjj \[G]áldjuk Őt, \[D]zengjen a \[C]{d\_{a}}l!
-    Jöjj \[G]áldjuk Őt, \[D]zengjen a \[C]dal!
+    Jöjj, \[G]áldjuk Őt, \[D]zengjen a \[C]{d\_{a}}l!
+    Jöjj, \[G]áldjuk Őt, \[D]zengjen a \[C]dal!
   \endchorus
 
   \beginverse\memorize
