--- a/songs/mint-maria.tex
+++ b/songs/mint-maria.tex
@@ -12,7 +12,7 @@
     \[Am] Azért, hogy mindig Te élj \[E]bennünk.
   \endverse
 
-  \beginverse\
+  \beginverse
     ^ Urunk, mi úgy akarunk ^élni,
     ^ Hogy bennünk a Te hangod ^szóljon,
     ^ Elszakadva minden ^mástól,
@@ -27,15 +27,15 @@
     Őt \[D]itt lenn a \[A]Földön.
   \endchorus
 
-  \beginverse\
-    ^ Urunk mi úgy akarunk ^élni,
+  \beginverse
+    ^ Urunk, mi úgy akarunk ^élni,
     ^ Hogy azt keressük, ami ^égi,
     ^ Hogy felajánljuk egész ^munkánk,
     ^ Minden napunk baját, ^gondját.
   \endverse
 
   \beginverse
-    ^ Urunk mi úgy akarunk ^élni,
+    ^ Urunk, mi úgy akarunk ^élni,
     ^ Hogy lángra gyúljon éle^tünk,
     ^ Továbbadva szíved ^vágyát,
     ^ Szereteted élő ^lángját.
