--- a/songs/napfiver-holdnover.tex
+++ b/songs/napfiver-holdnover.tex
@@ -32,7 +32,7 @@
   \beginverse
     ^Fivérem ^Nap és ^n{\_{ő}}^vérem ^Hold,
     ^ Most végre ^látok, s ^hallom ^hango^tok!
-    ^ Megölel^ném az ^egész ^vil\_{á}^got!
+    ^ Megölel^ném az ^egész ^vilá^got!
   \endverse
 
   \beginverse*
@@ -42,8 +42,8 @@
   \beginverse*
     ^Fivérem ^Nap és ^n{\_{ő}}^vérem ^Hold,
     ^ Most végre ^látok, s ^hallom ^hango^tok!
-    ^ Megölel^ném az ^egész ^vil\_{á}^got!
-    % ^ Megölel^ném az ^egész ^vil\_{á}\[Gm]got! \[Gm7] ^
+    ^ Megölel^ném az ^egész ^vilá^got!
+    % ^ Megölel^ném az ^egész ^vilá\[Gm]got! \[Gm7] ^
   \endverse
 
 \endsong
