--- a/songs/ne-felj-mert-megvaltottalak.tex
+++ b/songs/ne-felj-mert-megvaltottalak.tex
@@ -12,7 +12,7 @@
     \[Hm]Pásztorod va\[Em]gyok, elveszni \[A]senkit nem ha\[D]gyok.
     Karom fe\[Hm]léd t\_{á}\[Em]rom, kiárad \[G]áld\_{á}\[D]som.
     \[Hm]Nem rejtőzöm \[Em]el, szívem a \[A]szívednek fe\[D]lel,
-    Amikor \[Hm]úgy \_{é}r\[Em]zed, nyomaszt a \[A7]{\_{é}}\[D]let.
+    Amikor \[Hm]úgy \_{é}r\[Em]zed, nyomaszt az \[A7]{\_{é}}\[D]let.
   \endverse
 
   \beginverse*
