--- a/songs/szeretnelek-megtalalni.tex
+++ b/songs/szeretnelek-megtalalni.tex
@@ -21,21 +21,21 @@
     ^Örökké változik körülöttem ^minden,
     De ^eloszlik bennem minden féle^lem,
     Mert ^biztos pontként ott ragyogsz föl^öttem,
-    ^Csillag az éjje^len, ^utat mutatsz ne^{k\_{e}}m
-    ^Egyedüli kincsem ^Te vagy Iste^nem.
+    ^Csillag az éjje^len, ^utat mutatsz ne^{k\_{e}}m,
+    ^Egyedüli kincsem ^Te vagy, Iste^nem.
   \endverse
 
   \beginchorus
-    Minden \[Hm]körülötted \[C]forog, benned {\[Hm Em]{\_{é}}}l,
+    Minden \[Hm]körülötted \[C]forog, Benned {\[Hm Em]{\_{é}}}l,
     Már nem \[Hm]számít többé, \[C]hol, hogyan, mi\[D]ért.
   \endchorus
 
   \beginverse
     ^Szeretném, ha mindig ragyognál bel^őlem,
-    ^Kérdéseimre válasz Te lesz^el
+    ^Kérdéseimre válasz Te lesz^el,
     ^Minden mozdulat szeretetté ^válik,
     ^Igazság, érte^lem, ^csillag az éjje^l{\_{e}}n,
-    ^Egyedüli kincsem ^Te vagy Iste^nem.
+    ^Egyedüli kincsem ^Te vagy, Iste^nem.
   \endverse
 
   \beginverse*
