--- a/songs/szuntelenul-neked-eneklek-maria.tex
+++ b/songs/szuntelenul-neked-eneklek-maria.tex
@@ -18,7 +18,7 @@
     \[F]Te, aki csak az \[C]igazságban \[F]éltél,
     \[F]Te, a szabadság \[C]igaz asszo\[F]nya.
     A sz\[F]eretetet, amit megta\[Gm]nultam a szíved\[A#]ből,
-    \[Am]elviszem az \[Dm]embe\[A#]rek kö\[C]zé.
+    \[Am]Elviszem az \[Dm]embe\[A#]rek kö\[C]zé.
   \endverse
 
   \beginverse*
@@ -27,9 +27,9 @@
 
   \beginverse
     ^Légy mellettem ^mindig, Isten ^Anyja,
-    ^világítsd be sz^ívem léted^del.
+    ^Világítsd be sz^ívem léted^del.
     ^Bölcsességed kivirágzik ^bennem, és ezt a ^fényt
-    ^elviszem az ^embe^rek kö^zé.
+    ^Elviszem az ^embe^rek kö^zé.
   \endverse
 
   \beginverse*
