--- a/songs/tancolj-az-urnak.tex
+++ b/songs/tancolj-az-urnak.tex
@@ -42,7 +42,7 @@
 
   \beginverse
     Kik ^kedvesek az ^Úrnak, ^dicsérik ^Őt,
-    ^Hűsé^gükkel ^szol^gál^nak!
+    ^Hűsé^gükkel ^szol^gál^nak.
     Mint ^betlehemi ^nyájak ^pásztora^i,
     ^Hódol^junk ^szí^ne e^lőtt!
   \endverse
