--- a/songs/taplalo-szent-kenyer.tex
+++ b/songs/taplalo-szent-kenyer.tex
@@ -1,11 +1,11 @@
-\beginsong{Tápláló szent kenyér}
+\beginsong{Tápláló szent Kenyér}
 [
   by={Gável testvérek}
 ]
 
   \beginverse*
-    /: Tápláló \[D]Szent Kenyér, tápláló \[Hm]Drága Vér,
-    Betölti \[Em]szívemet a végte\[A4]len. \[A]
+    /: Tápláló \[D]szent Kenyér, tápláló \[Hm]drága Vér,
+    Betölti \[Em]szívemet a Végte\[A4]len. \[A]
     Békémnek \[D]záloga, lelkemnek \[Hm]otthona,
     Formáld át \[Em]életem, légy ve\[A4]lem! \[A] :/ \[D]
   \endverse
