--- a/songs/vak-ember.tex
+++ b/songs/vak-ember.tex
@@ -39,9 +39,9 @@
   \endverse
 
   \beginverse
-    S mi ^mind csak ü^lünk, és a ^szívünk ki^ált,
-    S mi ^mind csak ü^lünk, és a ^szívünk ki^ált,
-    S mi ^mind csak ü^lünk, és a ^szívünk ki^ált:
+    S mi ^mind csak ü^lünk és a ^szívünk ki^ált,
+    S mi ^mind csak ü^lünk és a ^szívünk ki^ált,
+    S mi ^mind csak ü^lünk és a ^szívünk ki^ált:
   \endverse
 
   \beginverse*
