--- a/songs/vizek-felett.tex
+++ b/songs/vizek-felett.tex
@@ -15,7 +15,7 @@
   \endverse
 
   \beginchorus
-    \[G] Nagy ne\[D]ved h\_{í}vom \[A]én \[A4] \[G] és felné\[D]zek a vizek fö\[A]lé.
+    \[G] Nagy ne\[D]ved h\_{í}vom \[A]én, \[A4] \[G] és felné\[D]zek a vizek fö\[A]lé.
     Ott l\_{á}tlak \[G]én. A lelkem \[D]benned m\_{e}gpi\[A]hen. Enyém v\[G]agy és \[A]én Ti\[Hm]ed.
   \endchorus
 
@@ -35,7 +35,7 @@
   \fi
 
   \beginverse*
-    /: \[Hm] Lélek add, hogy Benned \[G]teljesen megbízzak,
+    /: \[Hm] Lélek, add, hogy Benned \[G]teljesen megbízzak,
     A vízen \[D]bátran Veled járjak, és \[A]bárhová hívsz, menjek!
     \[Hm] Vigyél tovább, mint a \[G]lábam tudna menni,
     Taníts \[D]teljes hittel járni, jelen\[A]létedben élni! :/ \rep{3}
