--- a/songs/aldalak-jo-uram.tex
+++ b/songs/aldalak-jo-uram.tex
@@ -1,16 +1,16 @@
-\beginsong{Áldalak jó Uram}
+\beginsong{Áldalak, jó Uram}
 [
   by={Claude Frayesse, Alaine Bergèse}
 ]
 
   \beginverse*
-    \[C]Ál\[G]dalak jó U\[Am]ram, \[F]teljes \[G]szívem\[C]ből.
+    \[C]Ál\[G]dalak, jó U\[Am]ram, \[F]teljes \[G]szívem\[C]ből.
     \[F]Hirdetem \[G]majd \[E7]csodás tette\[Am]id
-    És \[Dm]éne\[D]kelek \[G4]ró\[G]lad.
+    És \[Dm]éne\[D]kelek \[G4]Ró\[G]lad.
   \endverse
 
   \beginverse*
-    \[C]Ál\[G]dalak jó U\[Am]ram, \[F]teljes \[G]szívem\[C]ből.
+    \[C]Ál\[G]dalak, jó U\[Am]ram, \[F]teljes \[G]szívem\[C]ből.
     \[F]Boldoggá \[G]tesz, hogy \[E]Hozzád tarto\[Am]zom.
     \[Dm]Alle\[G]{l\_{u}}\[C]ja.
   \endverse
