--- a/songs/neked-hodolok.tex
+++ b/songs/neked-hodolok.tex
@@ -1,10 +1,10 @@
 \beginsong{Néked hódolok}[]
 
   \beginverse*
-    \[A]Néked hódo\[Hm]lok Jé\[E]zus, dicső Ki\[A]rály! \[D] \[E]
-    \[A]Néked hódo\[Hm]lok Jé\[E]zus, dicső Ki\[A]rály!
+    \[A]Néked hódo\[Hm]lok, Jé\[E]zus, dicső Ki\[A]rály! \[D] \[E]
+    \[A]Néked hódo\[Hm]lok, Jé\[E]zus, dicső Ki\[A]rály!
+    Ujjongj, da\[Hm]lolj szív\[E]{\_{e}}m, és imádjad \[A]Őt! \[F#m]
     Ujjongj, da\[Hm]lolj szív\[E]{\_{e}}m, és imádjad \[A]Őt!
-    \[F#m] Ujjongj, da\[Hm]lolj szív\[E]{\_{e}}m, és imádjad \[A]Őt!
   \endverse
 
 \endsong
