More authors and minor fixes

--- a/compilations/antiochia.tex
+++ b/compilations/antiochia.tex
@@ -106,7 +106,7 @@
     \input{songs-mass.tex}
   \end{songs}
 
-  \newpage
+  \newpage\null\newpage
   \thispagestyle{empty}
 
   % To be continued...
