--- a/song-template.tex
+++ b/song-template.tex
@@ -1,11 +1,11 @@
 \beginsong{Cím \\ Alcím}
 [
-  by={Szerző},
-  sr={Referencia},
-  cr={\copyright~2015 XYZ.},
-  li={Used with permission.},
+  ititle={an extra index entry for a hidden title},
   index={extra index entry for a line of lyrics},
-  ititle={an extra index entry for a hidden title}
+  sr={Referencia},
+  by={Szerző},
+  cr={\copyright~2015 XYZ.},
+  li={Used with permission.}
 ]
 
   \ifchorded
