--- a/songs/adjunk-halat.tex
+++ b/songs/adjunk-halat.tex
@@ -1,4 +1,7 @@
-\beginsong{Adjunk hálát}[]
+\beginsong{Adjunk hálát}
+[
+  by={Ester de Vries, Gerencsér Zsuzsa, Somogyi András, Varga Attila, Varga Mária}
+]
 
   \ifchorded
     \versesep=12pt plus 3pt minus 7pt
