--- a/songs/aldalak-jo-uram.tex
+++ b/songs/aldalak-jo-uram.tex
@@ -1,6 +1,6 @@
 \beginsong{Áldalak, jó Uram}
 [
-  by={Claude Frayesse, Alaine Bergèse}
+  by={Alaine Bergèse, Claude Frayesse}
 ]
 
   \beginverse*
