--- a/songs/aldjatok-az-urat.tex
+++ b/songs/aldjatok-az-urat.tex
@@ -1,4 +1,7 @@
-\beginsong{Áldjátok az Urat}[]
+\beginsong{Áldjátok az Urat}
+[
+  by={M. \& M.-F. Penhard}
+]
 
   \beginverse*
     /: \[Em]Áldjátok az Ur\[Am]at, áldjátok szent ne\[Em]vét,
