--- a/songs/apokrif-ima.tex
+++ b/songs/apokrif-ima.tex
@@ -1,6 +1,7 @@
 \beginsong{Apokrif ima}
 [
-  by={Sillye Jenő, Weöres Sándor nyomán}
+  sr={Weöres Sándor nyomán},
+  by={Sillye Jenő}
 ]
 
   \ifchorded
