--- a/songs/atyam-tied-vagyok.tex
+++ b/songs/atyam-tied-vagyok.tex
@@ -1,4 +1,7 @@
-\beginsong{Atyám, Tied vagyok}[]
+\beginsong{Atyám, Tied vagyok}
+[
+  by={Donna Adkins}
+]
 
   \beginverse\memorize
     \[C]Atyám, Tied \[F]vagyok, és \[G]szüntelen i\[C]mádlak!
