--- a/songs/ave-maria.tex
+++ b/songs/ave-maria.tex
@@ -1,6 +1,6 @@
 \beginsong{Ave Maria}
 [
-  by={zene: Maria Parkinson \newline magyar szöveg: Aszalós Zoltán - Formanek Tamás - Varga Attila}
+  by={Maria Parkinson, Aszalós Zoltán, Formanek Tamás, Varga Attila}
 ]
 
   \beginchorus
