--- a/songs/csak-jezusnak-szolgalok.tex
+++ b/songs/csak-jezusnak-szolgalok.tex
@@ -1,4 +1,7 @@
-\beginsong{Csak Jézusnak szolgálok}[]
+\beginsong{Csak Jézusnak szolgálok}
+[
+  by={Varga Attila}
+]
 
   \beginchorus
     Csak \[G]Jézus\[D]nak \[Em]szolg\_{á}\[C]lok, az \[G]Ő or\[C]szágát \[G]v{\_{á}}\[D]rom,
