--- a/songs/egyutt-fog-ujjongni.tex
+++ b/songs/egyutt-fog-ujjongni.tex
@@ -1,4 +1,7 @@
-\beginsong{Együtt fog ujjongni}[]
+\beginsong{Együtt fog ujjongni}
+[
+  sr={Jeromos 31,13}
+]
 
   \beginverse*
     \[H7]Együtt fog ujjongni \[Em]fiatal és öreg is
