--- a/songs/en-uram-en-istenem.tex
+++ b/songs/en-uram-en-istenem.tex
@@ -1,4 +1,7 @@
-\beginsong{Én Uram, én Istenem}[]
+\beginsong{Én Uram, én Istenem}
+[
+  by={Flüe-i Szent Miklós, Ferenczy Rudolf}
+]
 
   \ifchorded
     \beginverse*
