--- a/songs/ha-jon-az-ur.tex
+++ b/songs/ha-jon-az-ur.tex
@@ -33,7 +33,7 @@
 
   \beginverse
     Nem sakko^zik, nem golfozik, egy rendes angyal nem i^szik,
-    Így éne^kel, ó ^alle^luja, ^ miközben ^rock n' ^rollo^zik! ^ ^
+    Így éne^kel, ó, ^alle^luja, ^ miközben ^rock n' ^rollo^zik! ^ ^
   \endverse
 
 \endsong
