--- a/songs/halat-adok-hogy-itt-a-reggel.tex
+++ b/songs/halat-adok-hogy-itt-a-reggel.tex
@@ -1,6 +1,7 @@
 \beginsong{Hálát adok, hogy itt a reggel}
 [
-  ititle={Reggeli hála}
+  ititle={Reggeli hála},
+  by={M. G. Schneider, Cselényi I. Gábor}
 ]
 
   \beginverse\memorize
