--- a/songs/ime-az-isten-satora.tex
+++ b/songs/ime-az-isten-satora.tex
@@ -1,4 +1,8 @@
-\beginsong{Ímé, az Isten sátora}[]
+\beginsong{Ímé, az Isten sátora}
+[
+  sr={Jelenések könyve 21,4 alapján},
+  by={Hollósy Péter}
+]
 
   \ifchorded
     \beginverse*
