--- a/songs/indulj-a-vilagba.tex
+++ b/songs/indulj-a-vilagba.tex
@@ -42,9 +42,9 @@
   \endverse
 
   \beginverse
-    ^A szeretet, a szeretet, ki a közösséget építi,
-    ^A szeretet, a szeretet, ki a közösséget építi,
-    ^A szeretet, a szeretet, ki a közösséget építi,
+    ^A Szeretet, a Szeretet, ki a közösséget építi,
+    ^A Szeretet, a Szeretet, ki a közösséget építi,
+    ^A Szeretet, a Szeretet, ki a közösséget építi,
     És ^tovább szeretné ad^ni!
   \endverse
 
@@ -56,9 +56,9 @@
   \endverse
 
   \beginverse
-    ^És én, és te, és mi, az Úr, a szeretet, az Antioch, ki a közösséget építi,
-    És ^én, és te, és mi, az Úr, a szeretet, az Antioch, ki a közösséget építi,
-    És ^én, és te, és mi, az Úr, a szeretet, az Antioch, ki a közösséget építi,
+    ^És én, és te, és mi, az Úr, a Szeretet, az Antioch, ki a közösséget építi,
+    És ^én, és te, és mi, az Úr, a Szeretet, az Antioch, ki a közösséget építi,
+    És ^én, és te, és mi, az Úr, a Szeretet, az Antioch, ki a közösséget építi,
     És ^tovább szeretné ad^ni!
   \endverse
 
