--- a/songs/indulj-es-menj.tex
+++ b/songs/indulj-es-menj.tex
@@ -1,4 +1,8 @@
-\beginsong{Indulj és menj}[]
+\beginsong{Indulj és menj}
+[
+  sr={Ezekiel 3,4},
+  by={Hollósy Péter}
+]
 
   \ifchorded
     \beginverse*
