--- a/songs/jezus-var-terad.tex
+++ b/songs/jezus-var-terad.tex
@@ -1,4 +1,7 @@
-\beginsong{Jézus vár terád}[]
+\beginsong{Jézus vár terád}
+[
+  by={M. \& M.-F. Penhard, Szulyovszky Endre, Szulyovszky Rita}
+]
 
   \beginchorus
     /: \[Em] Jézus vár ter\[Hm]ád, Lelkét küldi hozz\[C]ád,
