--- a/songs/kesz-az-en-szivem.tex
+++ b/songs/kesz-az-en-szivem.tex
@@ -1,4 +1,8 @@
-\beginsong{Kész az én szívem}[]
+\beginsong{Kész az én szívem}
+[
+  sr={57. zsoltár alapján},
+  by={Lázár Attila}
+]
 
   \beginverse\memorize
     Kész az \[Dm]én sz\_{í}vem, Uram, \[Gm]Néked zeng a \[Dm]dalom.
