--- a/songs/kiraly-vagy.tex
+++ b/songs/kiraly-vagy.tex
@@ -1,4 +1,7 @@
-\beginsong{Király vagy}[]
+\beginsong{Király vagy}
+[
+  by={Matteo Mori, Csiszér László}
+]
 
   \beginverse*
     /: \[D]Király vagy, \echo{Király vagy}
