--- a/songs/latod-ujra-este-van.tex
+++ b/songs/latod-ujra-este-van.tex
@@ -1,4 +1,7 @@
-\beginsong{Látod, újra este van}[]
+\beginsong{Látod, újra este van}
+[
+  by={Roland Kent LaVoie}
+]
 
   \beginverse\memorize
     \[C] Látod, újra este van, Hozzád száll most \[C/H]halk sza\[Am]vam,
