--- a/songs/ne-felj-mert-megvaltottalak.tex
+++ b/songs/ne-felj-mert-megvaltottalak.tex
@@ -1,4 +1,7 @@
-\beginsong{Ne félj, mert megváltottalak}[]
+\beginsong{Ne félj, mert megváltottalak}
+[
+  by={Kindelmann Győző}
+]
 
   \beginchorus
     /: \[D]Ne félj, mert \[G]megváltotta\[A]lak,
