--- a/songs/nezz-testver-fel.tex
+++ b/songs/nezz-testver-fel.tex
@@ -1,4 +1,7 @@
-\beginsong{Nézz, testvér, fel}[]
+\beginsong{Nézz, testvér, fel}
+[
+  by={Équipe Allegria, Illésy István}
+]
 
   \beginchorus
     \[D]Nézz, testvér, fel, az \[F#m]Úr van itt, \[G]lángol\[A]jon a szí\[D]vünk!
