--- a/songs/nincs-mas-isten.tex
+++ b/songs/nincs-mas-isten.tex
@@ -1,6 +1,6 @@
 \beginsong{Nincs más isten}
 [
-  by={Chris Tomlin, fordította Váradi Attila},
+  by={Chris Tomlin, Váradi Attila},
   li={http://nyugodtleszazeleted.blogspot.hu/2010/11/nincs-mas-isten.html},
   index={Nálad lett borrá a víz}
 ]
