--- a/songs/o-az-ur.tex
+++ b/songs/o-az-ur.tex
@@ -1,7 +1,10 @@
-\beginsong{Ő az Úr}[]
+\beginsong{Ő az Úr}
+[
+  by={Marvin Frey}
+]
 
   \ifchorded
-    \versesep=12pt plus 3pt minus 7pt
+    \versesep=12pt plus 3pt minus 8pt
   \fi
 
   \beginverse\memorize
