--- a/songs/oly-jo-aldani.tex
+++ b/songs/oly-jo-aldani.tex
@@ -1,4 +1,8 @@
-\beginsong{Oly' jó áldani}[]
+\beginsong{Oly' jó áldani}
+[
+  sr={92. zsoltár alapján},
+  by={Ferenczy Rudolf, Rozsályi Z.}
+]
 
   \beginverse*
     \[F]Szívemből \[C]ünnepi \[F]ének á\[C]rad,
