--- a/songs/rejts-most-el.tex
+++ b/songs/rejts-most-el.tex
@@ -1,6 +1,6 @@
 \beginsong{Rejts most el}
 [
-  by={Reuben Morgan, fordította Labadics Kriszta}
+  by={Reuben Morgan, Labadics Kriszta}
 ]
 
   \beginverse\memorize
