--- a/songs/szeretem-orokke.tex
+++ b/songs/szeretem-orokke.tex
@@ -1,6 +1,7 @@
 \beginsong{Szeretem örökké}
 [
-  index={Eléd lépek, jó Uram}
+  index={Eléd lépek, jó Uram},
+  by={Vízy Márton}
 ]
 
   \beginverse\memorize
