--- a/songs/szeretnelek-megtalalni.tex
+++ b/songs/szeretnelek-megtalalni.tex
@@ -11,7 +11,7 @@
 
   \beginverse\memorize
     \[Em]Szeretnélek megtalálni önmag\[G]amban,
-    Mert \[Hm]nélküled minden bizonytal\[C]an.
+    Mert \[Hm]Nélküled minden bizonytal\[C]an.
     \[Am]Te vagy az a fény, mely megvilágít \[Em]mindent,
     \[C]Igazság, érte\[D]lem, \[Hm]tündöklő végte\[Em]{l\_{e}}n
     \[C]Egyedüli kincsem \[D]Te vagy, Isten\[G]em.
