--- a/songs/taplalo-szent-kenyer.tex
+++ b/songs/taplalo-szent-kenyer.tex
@@ -5,7 +5,7 @@
 
   \beginverse*
     /: Tápláló \[D]szent Kenyér, tápláló \[Hm]drága Vér,
-    Betölti \[Em]szívemet a Végte\[A4]len. \[A]
+    Betölti \[Em]szívemet a végte\[A4]len. \[A]
     Békémnek \[D]záloga, lelkemnek \[Hm]otthona,
     Formáld át \[Em]életem, légy ve\[A4]lem! \[A] :/ \[D]
   \endverse
