--- a/songs/ur-diadalmas-nagy-fenseg.tex
+++ b/songs/ur-diadalmas-nagy-fenseg.tex
@@ -1,4 +1,7 @@
-\beginsong{Az Úr diadalmas nagy fenség}[]
+\beginsong{Az Úr diadalmas nagy fenség}
+[
+  by={Hillsong United}
+]
 
   \beginverse*
     Az \[C]Úr dia\[G]dalmas nagy fen\[D]ség, ki az \[Em]egeken trónol,
