--- a/songs/varsz-rank.tex
+++ b/songs/varsz-rank.tex
@@ -10,7 +10,7 @@
     \[Am] A taber\[Dm]nákulumban \[G]vársz,
     Mert Te \[C]tudod \[Am]jól, hogy \[Dm]előbb vagy \[G]utóbb
     Meg\[C]értjük \[Am]majd:
-    \[F] Benned \[G]él a mennyor\[F]szág. \[C]
+    \[F] Benned \[G]itt a mennyor\[F]szág. \[C]
   \endchorus
 
   \beginverse\memorize
