--- a/songs/vizek-felett.tex
+++ b/songs/vizek-felett.tex
@@ -10,7 +10,7 @@
   \fi
 
   \beginverse\memorize
-    \[Hm] Meghívtál, hogy vízre \[D]lépjek, hol nélkü\[A]led elsüllye\[G]dek.
+    \[Hm] Meghívtál, hogy vízre \[D]lépjek, hol Nélkü\[A]led elsüllye\[G]dek.
     \[Hm] Ebben megtalállak \[D]Téged, a mélység\[A]ben megt\_{a}rt hi\[G]tem.
   \endverse
 
