--- a/songs/aldjad-en-lelkem-az-urat.tex
+++ b/songs/aldjad-en-lelkem-az-urat.tex
@@ -1,4 +1,7 @@
-\beginsong{Áldjad, én lelkem, az Urat}[]
+\beginsong{Áldjad, én lelkem, az Urat}
+[
+  by={Linda Stassen}
+]
 
   \ifchorded
     \beginverse*
