--- a/songs/halat-adok-az-esti-oran.tex
+++ b/songs/halat-adok-az-esti-oran.tex
@@ -1,6 +1,7 @@
 \beginsong{Hálát adok az esti órán}
 [
-  ititle={Esti hála}
+  ititle={Esti hála},
+  by={M. G. Schneider, Cselényi I. Gábor}
 ]
 
   % / jelek után: https://www.youtube.com/watch?v=ggrTwNKP5Ew
