--- a/songs/lelkem-aldd-az-urat.tex
+++ b/songs/lelkem-aldd-az-urat.tex
@@ -1,7 +1,10 @@
-\beginsong{Lelkem, áldd az Urat}[]
+\beginsong{Lelkem, áldd az Urat}
+[
+  by={Jonas Myrin, Matt Redman, Dobrocsi Gábor}
+]
 
   \ifchorded
-    \versesep=12pt plus 3pt minus 10pt
+    \versesep=12pt plus 3pt minus 11pt
   \fi
 
   \ifchorded
