--- a/songs/melybol-hozzad-szall-szavam.tex
+++ b/songs/melybol-hozzad-szall-szavam.tex
@@ -1,7 +1,10 @@
-\beginsong{A mélyből Hozzád száll szavam}[]
+\beginsong{A mélyből Hozzád száll szavam}
+[
+  by={Cselényi I. Gábor}
+]
 
   \ifchorded
-    \versesep=12pt plus 3pt minus 7pt
+    \versesep=12pt plus 3pt minus 8pt
   \fi
 
   \ifchorded
