--- a/songs/szentlelek-jojj.tex
+++ b/songs/szentlelek-jojj.tex
@@ -1,4 +1,7 @@
-\beginsong{Szentlélek, jöjj}[]
+\beginsong{Szentlélek, jöjj}
+[
+  by={M. \& M.-F. Penhard}
+]
 
   \ifchorded
     \versesep=12pt plus 3pt minus 10pt
