Final fixes before first release

--- a/compilations/antiochia.tex
+++ b/compilations/antiochia.tex
@@ -33,9 +33,9 @@
 \setlength{\footskip}{0.85cm}
 
 \setlength{\oddsidemargin}{-1cm}
-\setlength{\evensidemargin}{-1.8cm}
+\setlength{\evensidemargin}{-2.1cm}
 
-\setlength{\textwidth}{12.5cm}
+\setlength{\textwidth}{12.9cm}
 \setlength{\textheight}{18.5cm}
 
 \setlength{\songnumwidth}{1.02cm}
@@ -61,7 +61,7 @@
 \begin{document}
 
   \begin{titlepage}
-    \setlength{\oddsidemargin}{-1.3cm}
+    % \setlength{\oddsidemargin}{-1.3cm}
 
     \vspace*{1.3cm}
     \includegraphics[width=11cm]{Logo_songbook}
@@ -112,17 +112,19 @@
   % To be continued...
   \vspace*{\fill}
   % \vfill
-  0. kiadás (1. mintapéldány) - 2017 november
+  1. kiadás - Budaörs, 2017. november
 
   \vspace{0.3cm}
 
   Készítette: Balics Eszter, Nobilis Márió és Donkó István
 
+  Nepomuki Szent János Antiochia
+
   \vspace{0.3cm}
 
   A dokumentum LaTeX-ben íródott, forráskódja elérhető a
 
-  https://github.com/Isti115/budaorsi-antiochia-dalgyujtemeny oldalon.
+  https://isti115.github.io/budaorsi-antiochia-dalgyujtemeny oldalon.
 
   Ugyanitt megtalálható a legfrissebb kiadás is PDF formátumban.
 
