--- a/songs-mass/isten-baranya-k299.tex
+++ b/songs-mass/isten-baranya-k299.tex
@@ -1,6 +1,6 @@
 \beginsong{Isten báránya I.}
 [
-  by={Ferenczy Rudolf},
+  by={Ferenczy Rudolf (Dax)},
   li={Kék könyv / 299.}
 ]
 
@@ -12,17 +12,17 @@
 
   \beginverse
     \[Em]Bűneinket, égi Bárány, \[Am]szent vérednek \[D7]drága árán
-    \[G]mind elveszed, \[Am]irgal\[H7]mazz ne\[Em]kem!
+    \[G]Mind elveszed, \[Am]irgal\[H7]mazz ne\[Em]kem!
   \endverse
 
   \beginverse
     \[Em]Bűneinket, égi Bárány, \[Am]szent vérednek \[D7]drága árán
-    \[G]mind elveszed, \[Am]irgal\[H7]mazz ne\[Em]künk!
+    \[G]Mind elveszed, \[Am]irgal\[H7]mazz ne\[Em]künk!
   \endverse
 
   \beginverse
     \[Em]Bűneinket, égi Bárány, \[Am]szent vérednek \[D7]drága árán
-    \[G]mind elveszed, \[Am]adj bé\[H7]két ne\[Em]künk!
+    \[G]Mind elveszed, \[Am]adj bé\[H7]két ne\[Em]künk!
   \endverse
 
   \ifchorded
