--- a/songs-taize/bizakodjatok-jo-az-ur.tex
+++ b/songs-taize/bizakodjatok-jo-az-ur.tex
@@ -5,7 +5,7 @@
 
   \beginverse*
     \[D]Bizakodjatok, \[Hm]jó az Úr, \[D]{j\_{ó}}s\_{á}g\_{a} \[A]éltet,
-    \[Em]Bizakodjatok, \[C]jó az Úr, \[Em]Allel\[A]{\_{u}}\[D]ja!
+    \[Em]Bizakodjatok, \[C]jó az Úr, \[Em]allel\[A]{\_{u}}\[D]ja!
   \endverse
 
 \endsong
