--- a/songs/ebredj-ember.tex
+++ b/songs/ebredj-ember.tex
@@ -55,7 +55,7 @@
 
   \beginverse
     És az ^élet, ^íme, megjele^nt, ^ köztünk ^él Ő ^ Szentlelké^ben.
-    Hív Ő ^téged, ^ hogy élj ve^le, add át ^néki ^ a szíve^det!
+    Hív Ő ^téged, ^ hogy élj ve^le, add át ^Néki ^ a szíve^det!
   \endverse
 
   \beginverse*
