--- a/songs/egi-kenyer.tex
+++ b/songs/egi-kenyer.tex
@@ -16,7 +16,7 @@
     Hogy \[G]önmagad add ne\[D]künk.
     \[Hm]Jézus az \[A]élet,
     \[Hm] Szerete\[A]tével lángra \[F#m]gyújt
-    \[A]majd minden \[G]embert.\[D]
+    \[A]Majd minden \[G]embert.\[D]
  \endverse
 
   \beginverse*
