--- a/songs/elhetunk.tex
+++ b/songs/elhetunk.tex
@@ -7,9 +7,9 @@
 
   \beginchorus
     \[D]Élhetünk, sza\[G]baddá lett az \[A]{\_{é}}le\[G]tünk,
-    mert \[D]már a \[A]szeretet \[D]{\_{é}}ltet.
+    Mert \[D]már a \[A]szeretet \[D]{\_{é}}ltet.
     \[D]Élhetünk, sza\[G]baddá tetted \[D]{\_{é}}le\[G]tünk,
-    mert \[D]Te vagy \[A]maga az \[D]{\_{é}}let!
+    Mert \[D]Te vagy \[A]maga az \[D]{\_{é}}let!
   \endchorus
 
   \beginverse\memorize
