--- a/songs/en-uram-en-istenem.tex
+++ b/songs/en-uram-en-istenem.tex
@@ -1,6 +1,6 @@
 \beginsong{Én Uram, én Istenem}
 [
-  by={Flüe-i Szent Miklós, Ferenczy Rudolf}
+  by={Flüe-i Szent Miklós, Ferenczy Rudolf (Dax)}
 ]
 
   \ifchorded
