--- a/songs/im-itt-jon-o.tex
+++ b/songs/im-itt-jon-o.tex
@@ -12,7 +12,7 @@
 
   \beginchorus
     /: Ím, \[Em]itt jön Ő, átkel \[Hm]a hegyen,
-    a \[Em]dombon át sza\[C]lad felém a \[Hm]kedve\[Em]sem! :/ \rep{2}
+    A \[Em]dombon át sza\[C]lad felém a \[Hm]kedve\[Em]sem! :/ \rep{2}
   \endchorus
 
   \beginverse\memorize
