--- a/songs/indulj-a-vilagba.tex
+++ b/songs/indulj-a-vilagba.tex
@@ -15,7 +15,7 @@
 
   \beginchorus
     \[G]Indulj a világba, s \[D]menjél bármerre:
-    \[A]magas havasokba, s a kék \[D]tengerre,
+    \[A]Magas havasokba, s a kék \[D]tengerre,
     \[G]Indulj a világba, az \[D]Úr van teveled,
     \[A]Indulj hát és építsd a kö\[D]zös\[A]sé\[D]get!
   \endchorus
