--- a/songs/indulj-es-menj.tex
+++ b/songs/indulj-es-menj.tex
@@ -18,8 +18,10 @@
   \endverse
 
   \beginchorus
-    /: \[G]Küldelek \[D]én, \[H7]megáldlak \[Em]én,
-    Csak \[C]menj és \[D]hirdesd sza\[Em]vam! :/ \rep{2} \[H7]
+    \[G]Küldelek \[D]én, \[H7]megáldlak \[Em]én,
+    Csak \[C]menj és \[D]hirdesd sza\[Em]vam! \[H7]
+    \[G]Küldelek \[D]én, \[H7]megáldlak \[Em]én,
+    Csak \[C]menj és \[D]hirdesd sza\[Em]vam!
   \endchorus
 
   \beginverse
