--- a/songs/jezus-a-mi-oltalmunk.tex
+++ b/songs/jezus-a-mi-oltalmunk.tex
@@ -32,7 +32,7 @@
     ^Eladó már ^minden, ^örömöd még ^sincsen,
     ^Ha ez a ^forrás ^nem árad ^rád!
     ^Ő az, aki ^ingyen ^már od'adott ^mindent,
-    ^Ér^tünk ^áldozva ^Önma^gát!
+    ^Ér^tünk ^áldozva ^önma^gát!
   \endverse
 
   \beginverse*
