--- a/songs/kesz-az-en-szivem.tex
+++ b/songs/kesz-az-en-szivem.tex
@@ -21,7 +21,7 @@
 
   \beginchorus
     /: Szent az \[Dm]Úr, jó az Úr, hirde\[Gm]tem a népek \[Dm]között,
-    Mert az Ő hűsé\[Gm]ge az égig \[Dm]ér. \[A-A4$^{\;(csak\;ismétlésnél)}$]{\ifchorded\hspace{1cm}\fi:/ \rep{2}} \[Dm]
+    Mert az Ő hűsé\[Gm]ge az égig \[Dm]ér. \[A-A4$^{\;(csak\;ismétlésnél)}$]{\ifchorded\hspace{1cm}\fi:/ \rep{2}}
   \endchorus
 
 \endsong
