--- a/songs/lelkem-az-urat-dicserd.tex
+++ b/songs/lelkem-az-urat-dicserd.tex
@@ -58,7 +58,7 @@
 
   \beginverse
     ^Minden nap ^dicsérem ^Őt, ^áldom az ^Urat, míg ^élek ^én.
-    ^Új dallal ^színe e^lőtt, ^ujjongva ^hirdetem ^szent Nev^ét!
+    ^Új dallal ^színe e^lőtt, ^ujjongva ^hirdetem ^szent nev^ét!
   \endverse
 
   \beginverse*
