--- a/songs/oly-jo-aldani.tex
+++ b/songs/oly-jo-aldani.tex
@@ -1,7 +1,7 @@
 \beginsong{Oly' jó áldani}
 [
   sr={92. zsoltár alapján},
-  by={Ferenczy Rudolf, Rozsályi Z.}
+  by={Ferenczy Rudolf (Dax), Rozsályi Z.}
 ]
 
   \beginverse*
@@ -67,7 +67,7 @@
   % \fi
 
   \beginverse
-    ^Hála, di^cső^ség Ne^ved^nek, ^ ^ ^ ^
+    ^Hála, di^cső^ség ne^ved^nek, ^ ^ ^ ^
     ^Most és ö^rök^ké az ^é^gen, a ^Föl^dön! \_{A}^men. ^ ^ ^ ^ \[A]
   \endverse
 
