--- a/songs/sotet-fenn-az-eg.tex
+++ b/songs/sotet-fenn-az-eg.tex
@@ -35,7 +35,7 @@
   \fi
 
   \beginverse
-    ^Földünk puszta ^rom, ^jöjj el, Irga^lom,
+    ^Földünk puszta ^rom, ^jöjj el, irga^lom,
     ^Jöttöd reményt, ^megváltást í^gér;
     ^Minden elve^szett, ^ne hagyd népe^det,
     ^Hiányod a ^szívekben már a ^földtől az égig ^ér!
