--- a/songs/szamtalan-a-csoda.tex
+++ b/songs/szamtalan-a-csoda.tex
@@ -14,7 +14,7 @@
 
  \beginverse*
     ^Úgy, mint a ^mag, mely ^földbe hullik ^és kihajt:
-    ^úgy termi ^élő Igéd ^bennünk égi ^gyümölcsét.
+    ^Úgy termi ^élő Igéd ^bennünk égi ^gyümölcsét.
     ^Fény és re^mény, ^béke, öröm, ^szabadság:
     ^Jézussal ^köztünk vagyunk
     Az ^egész Földön ^egy család!
