--- a/songs/szentlelek-jojj.tex
+++ b/songs/szentlelek-jojj.tex
@@ -14,14 +14,14 @@
   \fi
 
   \beginchorus\memorize
-    \[Em]Szentlélek, jöjj, lobogó \[D]Láng!
+    \[Em]Szentlélek, jöjj, lobogó \[D]láng!
     Szentlélek, jöjj, \[Hm]a világ \[Em]vár!
     Szentlélek, jöjj, viharos \[D]szél!
     Jöjj, \[Hm]áradj \[Em]szét!
   \endchorus
 
   \beginverse
-    ^Jöjj el, Élő vízfor^rás,
+    ^Jöjj el, élő vízfor^rás,
     Jöjj, a szívünk ^Téged ^vár!
     Jöjj, ki fényt adsz lelkünk^nek,
     Jöjj, úgy ^várunk ^Rád!
