--- a/songs/taplalo-szent-kenyer.tex
+++ b/songs/taplalo-szent-kenyer.tex
@@ -1,10 +1,10 @@
-\beginsong{Tápláló szent Kenyér}
+\beginsong{Tápláló szent kenyér}
 [
   by={Gável testvérek}
 ]
 
   \beginverse*
-    /: Tápláló \[D]szent Kenyér, tápláló \[Hm]drága Vér,
+    /: Tápláló \[D]szent kenyér, tápláló \[Hm]drága vér,
     Betölti \[Em]szívemet a végte\[A4]len. \[A]
     Békémnek \[D]záloga, lelkemnek \[Hm]otthona,
     Formáld át \[Em]életem, légy ve\[A4]lem! \[A] :/ \[D]
