--- a/songs-mass/dicsoseg-k159.tex
+++ b/songs-mass/dicsoseg-k159.tex
@@ -14,12 +14,12 @@
     \[Gm]Mindenható \[C7]Atyais\[F]ten! \[Gm] \[C7] \[F]
     \[A#]Urunk, Jézus \[C7]Krisztus, \[Gm]egyszülött Fi\[Dm]ú,
     \[A#] Urunk és \[C7]Istenünk, \[Gm] Isten \[Dm]Báránya,
-    Az \[C7]Atyának Fi\[F]a, Te \[F]elveszed a \[E]világ bűne\[A]it, \[A] \[Dm] irgalmazz \[Gm]nékünk; \[Gm]
+    Az \[C7]Atyának Fi\[F]a, Te elveszed a \[E]világ bűne\[A]it, \[A] \[Dm] irgalmazz \[Gm]nékünk; \[Gm]
     Te \[F]elveszed a \[E]világ bűne\[A]it, \[A] \[Dm] hallgasd meg \[Gm]könyörgésünket.
     Te az \[F]Atya jobbján \[E]ülsz, \[E] irgalmazz \[A]nékünk!
-    Mert \[D]egyedül Te vagy a \[D]Szent, Te vagy az \[A]Úr,
+    Mert \[D]egyedül Te vagy a Szent, Te vagy az \[A]Úr,
     Te vagy az \[F#m]egyetlen Föl\[E]ség, Jézus \[A]Krisztus,
-    A \[F#m]Szentlélekkel \[Hm]együtt, az \[E]Atyaisten \[E]dicsőségé\[A]ben. \[G]
+    A \[F#m]Szentlélekkel \[Hm]együtt, az \[E]Atyaisten dicsőségé\[A]ben. \[G]
     \[A]{\_{A}}\[D]men.
   \endverse
 
