--- a/songs/vizek-felett.tex
+++ b/songs/vizek-felett.tex
@@ -16,7 +16,7 @@
 
   \beginchorus
     \[G] Nagy ne\[D]ved h\_{í}vom \[A]én, \[A4] \[G] és felné\[D]zek a vizek fö\[A]lé.
-    Ott l\_{á}tlak \[G]én. A lelkem \[D]benned m\_{e}gpi\[A]hen. Enyém v\[G]agy és \[A]én Ti\[Hm]ed.
+    Ott l\_{á}tlak \[G]én. A lelkem \[D]Benned m\_{e}gpi\[A]hen. Enyém v\[G]agy és \[A]én Ti\[Hm]ed.
   \endchorus
 
   \beginverse
